--- a/firebase.json
+++ b/firebase.json
@@ -9,8 +9,7 @@
         "firebase-debug.log",
         "firebase-debug.*.log"
       ],
-      "predeploy": [
-      ]
+      "predeploy": []
     }
   ],
   "firestore": {
