--- a/TDR/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/TDR/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -36,7 +36,7 @@
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "UnityEngine.ProBuilder.ProBuilderEditor-isUtilityWindow",
-                "value": "{\"m_Value\":false}"
+                "value": "{\"m_Value\":true}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -226,12 +226,12 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastPivotPosition",
-                "value": "{\"m_Value\":{\"x\":0.15074920654296876,\"y\":-0.0931600034236908,\"z\":1.247523307800293}}"
+                "value": "{\"m_Value\":{\"x\":-0.1456640064716339,\"y\":-0.020679950714111329,\"z\":0.06554961204528809}}"
             },
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":-0.3014981746673584,\"y\":0.1863200068473816,\"z\":-2.495047092437744}}"
+                "value": "{\"m_Value\":{\"x\":0.2913280129432678,\"y\":0.041359663009643558,\"z\":-0.13109922409057618}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
